--- a/refind_linux_template.conf
+++ b/refind_linux_template.conf
@@ -1,3 +1,3 @@
-"Boot using default options"     "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\intel-ucode.img initrd=boot\amd-ucode.img initrd=boot\initramfs-linux.img"
-"Boot using fallback initramfs"  "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\intel-ucode.img initrd=boot\amd-ucode.img initrd=boot\initramfs-linux-fallback.img"
-"Boot to terminal"               "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\intel-ucode.img initrd=boot\amd-ucode.img initrd=boot\initramfs-linux.img systemd.unit=multi-user.target"
+"Boot using default options"     "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\initramfs-linux.img"
+"Boot using fallback initramfs"  "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\initramfs-linux-fallback.img"
+"Boot to terminal"               "root=PARTUUID=${partition_uuid} rw add_efi_memmap initrd=boot\initramfs-linux.img systemd.unit=multi-user.target"
