Revert "remove caching (non-settings) stuff"
This reverts commit fd0c57ad0deda35ace96eb7443f47ab5e5402784.

--- a/files/lightdm-theme-settings.json
+++ b/files/lightdm-theme-settings.json
@@ -9,5 +9,22 @@
     "disableAvatar": true,
     "disableZoom": false,
     "clock12": true,
-    "randomizeBG": false
+    "randomizeBG": false,
+    "user": {
+        "username": "tim",
+        "image": null,
+        "language": null,
+        "display_name": "tim",
+        "home_directory": "/home/tim",
+        "layout": null,
+        "logged_in": false,
+        "name": "tim",
+        "session": "xfce",
+        "real_name": ""
+    },
+    "desktop": {
+        "name": "Xfce Session",
+        "key": "xfce",
+        "comment": "Use this session to run Xfce as your desktop environment"
+    }
 }
