--- a/files/setup-tim/vscode-settings.json
+++ b/files/setup-tim/vscode-settings.json
@@ -15,5 +15,6 @@
     "editor.fontLigatures": true,
     "security.workspace.trust.enabled": false,
     "svelte.plugin.svelte.note-new-transformation": false,
-    "svelte.enable-ts-plugin": true
+    "svelte.enable-ts-plugin": true,
+    "editor.renderWhitespace": "boundary"
 }
